--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
      |
      <a href="about.html">About</a>
       |
-      <a href="portfolio.html">Portfolio</a>
+      <a href="#">Portfolio</a>
  </nav>
  <hr>
 </head>
@@ -25,9 +25,14 @@
  <section>
    </section>
  <article>
-   <p>Article </p>
+   <p>Article</p>
  </article>
  <aside>Aside</aside>
+</body>
+</html>
+</p>
+ </article>
+ <aside>Go to <a href="index.html">Home</a></aside>
 
 </body>
 
