--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,19 @@
 <!DOCTYPE HTML>
-<HTML lang="en"
+<HTML lang="en">
+  <style>
+  body {
+             color:#0000ff
+      }
+   </style>
+   <body style="background-color:#87ceeb;">
 <head>
  <title>Jayla Marie Tutorials</title>
  <meta charset="utf-8">
  <meta name="Jayla Marie Tutorials" content="This structure is for my website">
  <meta name="keywords" content="Jayla,Marie,Tutorials,Bunting,Hair,Hair Stuff">
- <h1> Jayla Marie Tutorials</h1>
+ <header>
+   <h1 id=#mainTitle> Jayla Marie Tutorials</h1>
+ </header>
  <hr>
  <nav>   <a href="index.html">Home</a>
     |
@@ -22,12 +30,27 @@
    <h1> Portfolio </h1>
  </main>
  <hr>
- <section>
+ <section> <h4>Some of My Work</h4>
    </section>
+   <hr>
  <article>
-   <p>Article</p>
+  <img src="images/me-1.jpg" width="280" height="250" alt="Picture of My Edges">
  </article>
- <aside>Aside</aside>
+ <aside>This is a picture of how I style my "edges" on a daily.</aside>
+ <hr>
+ <article>
+   <img src="images/jiselle-1(1).jpg" width="280" height="250" alt="Picture of my sister">
+   <img src="images/jiselle-1(2).jpg" width="280" height="250" alt="Picture of my sister">
+   <img src="images/jiselle-1(3).jpg" width="280" height="250" alt="Picture of my sister">
+ </article>
+ <aside>These are pcitures of how I did my little sister, Jiselle's, hair. She is my main model. </aside>
+ <hr>
+ <article>
+   <img src="images/babymichael-1(1).jpg" width="280" height="250" alt="Picture of my brother">
+   <img src="images/babymichael-1(2).jpg" width="280" height="250" alt="Picture of my brother">
+ </article>
+ <aside>These are pictures of what I did to my little brother Michael. It was made to be a joke.
+ </aside>
 </body>
 </html>
 </p>
@@ -35,5 +58,5 @@
  <aside>Go to <a href="index.html">Home</a></aside>
 
 </body>
-
+<a href=#mainTitle>Go to top</a>
 </html>
